✨ about section and responsive

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Portfolio</title>
+    <title>Laurain Clement</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -14,6 +14,6 @@
     />
   </head>
   <body>
-    <app-root class="flex justify-center"></app-root>
+    <app-root class="flex flex-col items-center"></app-root>
   </body>
 </html>
