🚀 (Barebone): Barebone version 2
Supress components to restart from clear architecture

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="Personal web portfolio " />
+		<meta name="description" content="Laurain Clément personal web portfolio" />
 		<title>Laurain Clement</title>
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -15,8 +15,7 @@
 		/>
 	</head>
 	<body>
-		<app-root class="flex flex-col items-center"></app-root>
+		<app-root></app-root>
 		<script src="https://embed.twitch.tv/embed/v1.js"></script>
-		<script type="text/javascript"></script>
 	</body>
 </html>
