✨ (menu): Add menu feature

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 		/>
 	</head>
 	<body>
-		<app-root></app-root>
+		<app-root class="h-full"></app-root>
 		<script src="https://embed.twitch.tv/embed/v1.js"></script>
 	</body>
 </html>
